--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
       src="https://kit.fontawesome.com/cf80328a62.js"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon"
+    href=https://res.cloudinary.com/df9fyawpk/image/upload/v1698481765/Python-patterns/apple-touch-icon.png"
+    />
+
+    <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
     <div id="root"></div>
