--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     ></script>
 
     <link rel="icon" href="./favicon.ico" />
-    <link rel="apple-touch-icon"
-    href=https://res.cloudinary.com/df9fyawpk/image/upload/v1698481765/Python-patterns/apple-touch-icon.png"
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/df9fyawpk/image/upload/v1698481765/Python-patterns/apple-touch-icon.png"
     />
 
     <link rel="manifest" href="./manifest.json" />
